--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
         <input type="text" id="emotion" placeholder="e.g., Happiness">
       </label>
       <label>
+
 <!-- Ползунок для Aspect Ratio -->
 <label for="ratio">Aspect Ratio:</label>
-<input type="range" id="ratio" min="1" max="4" step="0.1" value="1">
-<span id="ratio-value">1:1</span> 
+<input type="range" id="ratio" min="0" max="11" step="1" value="6">
+<span id="ratio-value">3:4</span> <!-- Здесь будет отображаться значение Aspect Ratio -->
 
 <!-- Ползунок для Stylize Amount -->
 <label for="stylize">Stylize Amount:</label>
-<input type="range" id="stylize" min="0" max="1000" value="500">
-<span id="stylize-value">500</span> 
+<input type="range" id="stylize" min="0" max="1000" value="500" step="50">
+<span id="stylize-value">500</span> <!-- Здесь будет отображаться значение Stylize Amount -->
 
       <!-- Управление персонажами -->
       <h2>Characters</h2>
